--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <title>Jogo da Forca</title>
         <link rel="shortcut icon" href="content/favicon/icons8-pilar-grego-capital-96.png" type="image/x-icon">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="app.js" defer></script>
     </head>
-    <body>
+    <body id="pagina_inicial">
         <header>
             <h1>Jogo da Forca</h1>
             <p class="highscore"></p>
@@ -18,7 +18,7 @@
                 <button id="continuar" class="desativado" type="button">Continuar</button>
                 <button id="jogar" type="button">Novo Jogo</button>
                 <button id="dificuldade" type="button">Dificuldade</button>
-                <button id="memoria" type="button">Limpar Memoria</button>
+                <button id="memoria" type="button">Apagar save</button>
             </div>
         </main>
     </body>
