--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Jogo da Forca</title>
         <link rel="shortcut icon" href="content/favicon/icons8-pilar-grego-capital-96.png" type="image/x-icon">
-        <link rel="stylesheet" href="style.css">
+        <link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="app.js" defer></script>
     </head>
