--- a/jogo.html
+++ b/jogo.html
@@ -3,11 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Jogo da Forca</title>
+        <link rel="preload" href="content/favicon/icons8-pilar-grego-capital-96.png" as="image">
         <link rel="shortcut icon" href="content/favicon/icons8-pilar-grego-capital-96.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <script src="app.js" defer></script>
 
+        <link rel="preload" href="content/hangman/00.svg" as="image">
+        <link rel="preload" href="content/hangman/01.svg" as="image">
+        <link rel="preload" href="content/hangman/02.svg" as="image">
+        <link rel="preload" href="content/hangman/03.svg" as="image">
+        <link rel="preload" href="content/hangman/04.svg" as="image">
+        <link rel="preload" href="content/hangman/05.svg" as="image">
+        <link rel="preload" href="content/hangman/06.svg" as="image">
     </head>
     <body id="jogo">
         <div>
@@ -57,43 +65,8 @@
                 <button type="button">X</button>
                 <button type="button">Y</button>
                 <button type="button">Z</button>
-                
-                <!--
-                <div class="mover">
-                    <button type="button">A</button>
-                    <button type="button">B</button>
-                    <button type="button">C</button>
-                    <button type="button">D</button>
-                    <button type="button">E</button>
-                    <button type="button">F</button>
-                    <button type="button">G</button>
-                    <button type="button">H</button>
-                    <button type="button">I</button>
-                </div>
-                <div class="mover">
-                    <button type="button">J</button>
-                    <button type="button">K</button>
-                    <button type="button">L</button>
-                    <button type="button">M</button>
-                    <button type="button">N</button>
-                    <button type="button">O</button>
-                    <button type="button">P</button>
-                    <button type="button">Q</button>
-                    <button type="button">R</button>
-                </div>
-                <div class="mover">
-                    <button type="button">S</button>
-                    <button type="button">T</button>
-                    <button type="button">U</button>
-                    <button type="button">V</button>
-                    <button type="button">W</button>
-                    <button type="button">X</button>
-                    <button type="button">Y</button>
-                    <button type="button">Z</button>
-                    <button type="button">&ThinSpace;</button>
-                </div>
-                -->
             </div>
         </main>
+        <audio id="audio_jogo" src=""></audio>
     </body>
 </html>
